# rust-full-stack

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/application/: add.rs  menu.rs  print.rs
src/database/: add.rs  add_employee.rs  admin.rs  connect.rs  delete.rs  employee.rs  print.rs  search.rs
src/mongodb/: connect.rs
