[package]
name = "rust_full_stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# application layer
regex = "1.9.3" # for Regex
clearscreen = "2.0.1" # to clear the terminal screen

# data layer
mongodb = "2.6.1" # mongodb 
tokio = "1" # for async
serde = {version="1", features=["derive"]}  # Used in the Map Data into Structs section (Serialize/Deserialize)
futures = "0.3" # for query trys